refactor: streamline tracing integration tests and migrate to BaseIntegrationTest